--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cart-hook",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "This is a simple, hook based cart package for react",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -25,6 +25,7 @@
   "author": "DevAnsar",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
