--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cart-hook",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "description": "This is a simple, hook based cart package for react",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -55,6 +55,7 @@
   "files": [
     "dist",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "react-hook-form.png"
   ]
 }
