--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cart-hook",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "This is a simple, hook based cart package for react",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -55,7 +55,6 @@
   "files": [
     "dist",
     "LICENSE",
-    "README.md",
-    "react-hook-form.png"
+    "README.md"
   ]
 }
